--- a/inclure/liste-films-proposes.html
+++ b/inclure/liste-films-proposes.html
@@ -3,6 +3,7 @@
 	.imdb img {float: left;margin-left: -90px;position: relative;display: inline;}
 	.imdb dt,.imdb dd {margin-bottom: 0;}
 	.item.film.refuse .descriptif {color:#999;text-decoration: line-through;}
+	.item .action {float: right;}
 </style>
 <div class="listefilms">
 <B_films>
@@ -17,6 +18,7 @@
 		<li class="item film #STATUT">[(#STATUT|=={prop}|oui)[(#FORMULAIRE_JAIME{article,#ID_ARTICLE})]]
 			[<div class='descriptif #EDIT{descriptif}'>(#DESCRIPTIF|PtoBR|sinon{#TITRE}|image_reduire{80,125})</div>]
 			[(#AUTORISER{modifier,article,#ID_ARTICLE})
+			<div class="nettoyeur"></div>
 			<div class="action">
 			[(#STATUT|=={publie}|non)
 				[(#BOUTON_ACTION{Supprimer,[(#URL_ACTION_AUTEUR{instituer_objet,[article-(#ID_ARTICLE)-poubelle],#SELF})],ajax small})]
