--- a/inclure/liste-films-proposes.html
+++ b/inclure/liste-films-proposes.html
@@ -1,10 +1,3 @@
-<style>
-	.imdb {padding-left: 90px;}
-	.imdb img {float: left;margin-left: -90px;position: relative;display: inline;}
-	.imdb dt,.imdb dd {margin-bottom: 0;}
-	.item.film.refuse .descriptif {color:#999;text-decoration: line-through;}
-	.item .action {float: right;}
-</style>
 <div class="listefilms">
 <B_films>
 	<h3>[(#ENV{statut}|=={publie}|oui)
@@ -17,8 +10,14 @@
 		<BOUCLE_films(ARTICLES){id_rubrique}{statut IN #ENV{statut,#LISTE{prop,refuse}}}{notation}{!par #ENV{par,nombre_votes}}{pagination 20}>
 		<li class="item film #STATUT">[(#STATUT|=={prop}|oui)[(#FORMULAIRE_JAIME{article,#ID_ARTICLE})]]
 			[<div class='descriptif #EDIT{descriptif}'>(#DESCRIPTIF|PtoBR|sinon{#TITRE}|image_reduire{80,125})</div>]
-			[(#AUTORISER{modifier,article,#ID_ARTICLE})
 			<div class="nettoyeur"></div>
+			<div class="commenter">
+				<BOUCLE_mess(FORUMS){id_article} />[(#TOTAL_BOUCLE|oui)
+				<a href="#URL_ARTICLE">#TOTAL_BOUCLE commentaire[s(#TOTAL_BOUCLE|>{1}|oui)</a>]]
+				[(#TOTAL_BOUCLE|non)<a href="#URL_ARTICLE">Commenter</a>]
+				<//B_mess>
+			</div>
+			[(#AUTORISER{modifier,article,#ID_ARTICLE})
 			<div class="action">
 			[(#STATUT|=={publie}|non)
 				[(#BOUTON_ACTION{Supprimer,[(#URL_ACTION_AUTEUR{instituer_objet,[article-(#ID_ARTICLE)-poubelle],#SELF})],ajax small})]
