--- a/inclure/liste-films-proposes.html
+++ b/inclure/liste-films-proposes.html
@@ -13,7 +13,7 @@
 			<div class="nettoyeur"></div>
 			<div class="commenter">
 				<BOUCLE_mess(FORUMS){id_article} />[(#TOTAL_BOUCLE|oui)
-				<a href="#URL_ARTICLE">#TOTAL_BOUCLE commentaire[s(#TOTAL_BOUCLE|>{1}|oui)</a>]]
+				<a href="#URL_ARTICLE">#TOTAL_BOUCLE commentaire[s(#TOTAL_BOUCLE|>{1}|oui)]</a>]
 				[(#TOTAL_BOUCLE|non)<a href="#URL_ARTICLE">Commenter</a>]
 				<//B_mess>
 			</div>
