--- a/inclure/liste-films-proposes.html
+++ b/inclure/liste-films-proposes.html
@@ -15,12 +15,21 @@
 			[<div class='descriptif #EDIT{descriptif}'>(#DESCRIPTIF|PtoBR|sinon{#TITRE}|image_reduire{80,125})</div>]
 			<div class="ajax">#FORMULAIRE_TAGGER{article,#ID_ARTICLE}</div>
 			<div class="nettoyeur"></div>
-			<div class="commenter">
 				<BOUCLE_mess(FORUMS){id_article} />[(#TOTAL_BOUCLE|oui)
-				<a href="#URL_ARTICLE">#TOTAL_BOUCLE commentaire[s(#TOTAL_BOUCLE|>{1}|oui)]</a>]
-				[(#TOTAL_BOUCLE|non)<a href="#URL_ARTICLE">Commenter</a>]
+				<div class="commenter">
+				<a href="#URL_ARTICLE"
+								onclick="jQuery(this).parent().next().toggle('fast');return false;">#TOTAL_BOUCLE commentaire[s(#TOTAL_BOUCLE|>{1}|oui)]</a>
+				</div>
+				<div class="none">
+				<INCLURE{fond=inclure/film-comments,id_article,repondre_url=#URL_PAGE{forum,id_article=#ID_ARTICLE}} />
+				</div>
+				]
+				[<div class="commenter">
+				(#TOTAL_BOUCLE|non)<a href="#URL_PAGE{forum,id_article=#ID_ARTICLE}}" class="popin">Commenter</a>
+				</div>
+				]
 				<//B_mess>
-			</div>
+
 			[(#AUTORISER{modifier,article,#ID_ARTICLE})
 			<div class="action">
 			[(#STATUT|=={publie}|non)
