--- a/inclure/liste-films-proposes.html
+++ b/inclure/liste-films-proposes.html
@@ -25,7 +25,7 @@
 				</div>
 				]
 				[<div class="commenter">
-				(#TOTAL_BOUCLE|non)<a href="#URL_PAGE{forum,id_article=#ID_ARTICLE}}" class="popin">Commenter</a>
+				(#TOTAL_BOUCLE|non)<a href="#URL_PAGE{forum,id_article=#ID_ARTICLE}" class="popin">Commenter</a>
 				</div>
 				]
 				<//B_mess>
